Plotly version bump. Plot no longer overflows.

--- a/src/css/imcviewer.css
+++ b/src/css/imcviewer.css
@@ -1,3 +1,11 @@
 .imcimage {
     position: relative;
 }
+body {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
